2002-09-22 16:26  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSFontPanel.m (-init): Set sane defaults _before_ trying
	to set values for the current font.

	Move code to select a certain size in the size browser to
	-_trySelectSize:. Update the size in the preview and the browser
	when the size text field changes.

	Mark private variables and constants as static.

2002-09-22 01:23  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/gnustep/gui/NSView.h, Source/NSPanel.m, Source/NSText.m,
	Source/NSTextField.m, Source/NSView.m, Source/NSWindow.m: Add
	-needsPanelToBecomeKey method to NSView and override it to return
	YES in NSText and NSTextField. Use it in NSPanel to handle
	becomesKeyOnlyIfNeeded properly.

2002-09-21 18:54  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m corrected preprocessor error messages.
	* Source/NSToolbar.m corrected preprocessor error messages.
	
2002-09-21 17:48  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_familySelectionChanged:, score_difference):
	If an exact match for the wanted weight and traits can't be found,
	score all faces in the new family and select the one that differs
	the least.

2002-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Set flags to generate documentation using
	templates.

2002-09-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSSplitView.m ([NSSplitView -initWithCoder:]):
	set _never_displayed_before to YES.
	* Source/NSFont.m: rearrange the last change to make
	it look like other classes' initWithCoder/encodeWithCoder
	* Source/NSTextView.m: do not call _blink directly
	(suggested by Nicola Pero).
	* Source/NSButtonCell.m 
	([NSButtonCell -drawInteriorWithFrame:inView:]):
	if the button is NSImageOnly, draw the dotted frame at
	the right location.
	
2002-09-16 19:28  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSFont (+initialize, -initWithCoder:, -encodeWithCoder:):